<resources>
    <string name="app_name">Time Track</string>
    <string name="welcome"> Welcome Back</string>
    <string name="login"> Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loginButton">Login</string>
    <string name="d_ont_have_an_account">D\'ont have an account? </string>
    <string name="sign_up"> Sign Up</string>
    <string name="hello">Hello</string>
    <string name="date">date</string>
    <string name="job_name">Job name</string>
    <string name="hourly_rate">Hourly rate</string>
    <string name="start_date">Start Date</string>
    <string name="save">Save</string>
    <string name="plus">+</string>
    <string name="textview">TextView</string>
</resources>